--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>Full stack development: It refers to the development of both front end(client side) and back end(server side) portions of web application.<br>Full stack web Developers: Full stack web developers have the ability to design complete web application
         and websites. They work on the frontend, backend, database and debugging of web application or websites.</p>
     <h2>Output</h2>
-    <img src="./Screenshot (32).png">
+    <img src="./Screenshot 2021-11-16 184202.png">
 </body>
 
 </html>
